--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -16,7 +16,12 @@
             Title="About"
             ContentTemplate="{DataTemplate local:AboutPage}"
         />
-        
+
+        <ShellContent
+            Title="My Shopping List"
+            ContentTemplate="{DataTemplate local:ListEntryPage}"
+        />
+
     </TabBar>
     
 </Shell>
