--- a/ListPage.xaml
+++ b/ListPage.xaml
@@ -2,36 +2,43 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Selin_Robert_Cristian_Lab7.ListPage"
-             Title="ListPage"
-             xmlns:local="clr-namespace:Selin_Robert_Cristian_Lab7">
-    <StackLayout Margin="20">
-        <Editor Placeholder="Enter the description of the shopping list"
+             Title="ListPage">
+    <ContentPage.Content xmlns:local="clr-namespace:Selin_Robert_Cristian_Lab7">
+        <StackLayout Margin="20">
+            <Editor Placeholder="Enter the description of the shopping list"
                 Text="{Binding Description}"
-                HeightRequest="100"
+                HeightRequest="50"
                 TextColor="Black">
-            <Editor.Behaviors>
-                <local:ValidationBehaviour/>
-            </Editor.Behaviors>
-        </Editor>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Button Text="Save" Clicked="OnSaveButtonClicked"/>
-            <Button Grid.Column="1"
+                <Editor.Behaviors>
+                    <local:ValidationBehaviour/>
+                </Editor.Behaviors>
+            </Editor>
+            
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Button Text="Save" Clicked="OnSaveButtonClicked"/>
+                <Button Grid.Column="1"
                     Text="Delete"
                     Clicked="OnDeleteButtonClicked"/>
-        </Grid>
+            </Grid>
 
-        <ListView x:Name="listView" Margin="20">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <TextCell Detail="{Binding Description}"/>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+            <ListView x:Name="listView" Margin="20">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextCell Detail="{Binding Description}"/>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
 
-        <Button Text="Add/Choose Item to buy" MaximumWidthRequest="300" Clicked="OnChooseButtonClicked"/>
-    </StackLayout>
+            <Grid Margin="20">
+                <Button Grid.Column="2" Text="Delete Product" MaximumWidthRequest="200"/>
+            </Grid>
+
+
+            <Button Text="Add/Choose Item to buy" MaximumWidthRequest="300" Clicked="OnChooseButtonClicked"/>
+        </StackLayout>
+    </ContentPage.Content>
 </ContentPage>
