--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -22,6 +22,11 @@
             ContentTemplate="{DataTemplate local:ListEntryPage}"
         />
 
+        <ShellContent
+            Title="My Shops"
+            ContentTemplate="{DataTemplate local:ShopEntryPage}"
+        />
+
     </TabBar>
     
 </Shell>
